Bug fix: box-sizing set to default value to fix map line overflowing. Guess it was a bootstrap default that fucked it up

--- a/public/stylesheets/assignment_four.scss
+++ b/public/stylesheets/assignment_four.scss
@@ -1,4 +1,11 @@
 
 .map {
   height: 700px;
+
+  * {
+  	-webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+  	box-sizing: content-box;
+  }
 }
+
